--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
   </div>
 </section>
 
+<!-- bibtex
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
@@ -227,6 +228,7 @@
     }</code></pre>
   </div>
 </section>
+-->
 
 <footer class="footer">
   <div class="columns is-centered">
