--- a/index.html
+++ b/index.html
@@ -108,23 +108,24 @@
   </div>
 </section>
 
+<section class="hero is-small">
+  <div class="hero-body">
+    <div class="container">
+      <div class="column is-centered has-text-centered">
+        <div class="item">
+          <img src="static/images/READ.png" alt="cars peace"/>
+          </p>
+        </div>
+  </div>
+</div>
+</div>
+</section>
+
 <section class="section hero is-light">
   <div class="container is-max-desktop">
     <!-- Abstract. -->
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <!-- Video.
-        <div class="item">
-          <p style="margin-bottom: 30px">
-
-        <video id="teaser" controls height="100%">
-        <source src="./static/videos/explain.mp4"
-                type="video/mp4">
-        </video>
-        Sound will be played, so pay attention to volume.
-          </p>
-        </div>
-        -->
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
@@ -144,28 +145,35 @@
   <div class="hero-body">
     <div class="container">
       <div class="column is-centered has-text-centered">
-        <h2 class="title is-3">Novelty</h2>
-        <img src="static/images/READ.png" alt="cars peace"/>
+        <h2 class="title is-3">Contributions</h2>
       </div>
        <p>
-        <b>Retrieval Enhancement: </b>  
-        Typical stochastic diffusion-based motion planning methods generate motions by running reverse diffusion from a random (e.g., Gaussian) sample, which may result in motion that is infeasible and/or does not reach the goal (e.g., DDPM). 
+        <b><font size="5"> Retrieval Enhancement:</font></b> Typical stochastic diffusion-based motion planning methods generate motions by running reverse diffusion from a random (e.g., Gaussian) sample, which may result in motion that is infeasible and/or does not reach the goal (e.g., DDPM). 
         Retrieval-based methods use a diffusion process to refine a candidate (retrieved) motion that is assumed to be near the target motion. 
         However, prior retrieval-based methods employ forward diffusion to move towards the zero-mean Gaussian and then refine the motion towards the target, resulting in a longer, roundabout path. 
         Instead, READ performs diffusion directly from the retrieved motion to the target.
        </p>
+       <div style="text-align: center">
+        <img src="static/images/Retrieval_Enhancement_web.png" alt="cars peace" width="800" height="800"/>
+      </div>
        <br>
        <p>
-        <b>Latent space interpolation: </b>  
+        <b><font size="5"> Latent space interpolation as forward process:</font></b>
         Forward diffusion has difficulty in preserving the feasibility of the motion in the original high-dimensional task space. 
         To enhance the retrieved motion, READ instead performs forward diffusion by interpolation in a latent space in which the semantics of the motion, including feasibility, are preserved.
        </p>
+       <div style="text-align: center">
+       <img src="static/images/Forward_Process_web.png" alt="cars peace" width="1200" height="1200"/>
+      </div>
        <br>
        <p>
-        <b>Asymmetric diffusion: </b>  
+        <b><font size="5"> Asymmetric diffusion:</font></b>
         While the latent space supports the generation of feasible motions, the lower dimensionality makes it difficult to model high-resolution motions such as those needed for manipulation. 
         To address this, we propose asymmetric diffusion that performs the forward process in the latent space and the reverse process in the original space to achieve high-resolution refinement.
        </p>
+       <div style="text-align: center">
+       <img src="static/images/Asymmetric.png" alt="cars peace" width="1000" height="1000"/>
+      </div>
   </div>
 </div>
 </div>
